Bug 398052 - The dock stays hidden when closing the last shown and active window and there is only one dock present
Summary: The dock stays hidden when closing the last shown and active window and there...
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.8.0
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-30 07:47 UTC by Lucien
Modified: 2018-09-01 15:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.8.1
Sentry Crash Report:


Attachments
My layout (1.35 KB, text/plain)
2018-08-30 09:43 UTC, Lucien
Details
installed packages list (23.82 KB, text/plain)
2018-08-30 20:57 UTC, Lucien
Details
system information (2.11 KB, text/plain)
2018-08-31 08:25 UTC, Lucien
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lucien 2018-08-30 07:47:34 UTC
With "Avoid Active Windows” enabled, the dock stays hidden after closing the active window. When I hover the mouse-pointer over the place (edge of the screen at the bottom) where the dock is supposed to be, it comes back up until the next covering active window. When I minimize the active window, it does come back up normally. But when I use a plasma-applet in the plasma-panel (placed at the top), it works normally and does come back after closing a active window and it stays working normally. The Latte Dock also loads prior to my plasma-panel (it takes a long time for the plasma-panel to "boot-up"). When I log out/in the session or reboot the system, the issue starts again, until I use a applet on the plasma-panel.

I'm using Manjaro KDE on the stable branch, with:
KDE-plasma version 5.13.4
KDE-frameworks 5.49.0
QT-version 5.11.1
kernel 4.14.66-1-MANJARO
kvantum with KvGlass theme (but changing this to the default theme of Manjaro and removing kvantum did not fix the issue)
Comment 1 Michail Vourlakos 2018-08-30 07:58:05 UTC
I cant reproduce,

1. can you provide a video showing the issue at google drive?
2. can you send your layout in order to check it out?
3. does this happen also with the Default Latte Layout?
4. If you remove all your plasma panels and you relogin does the problem still remain in Latte?
Comment 2 Lucien 2018-08-30 09:43:17 UTC
Created attachment 114698 [details]
My layout
Comment 3 Lucien 2018-08-30 09:44:26 UTC
(In reply to Michail Vourlakos from comment #1)
> I cant reproduce,
> 
> 1. can you provide a video showing the issue at google drive?
> 2. can you send your layout in order to check it out?
> 3. does this happen also with the Default Latte Layout?
> 4. If you remove all your plasma panels and you relogin does the problem
> still remain in Latte?

1. The link to the video is: https://drive.google.com/file/d/1eC4ktlUL_t-pTQPBvSI3lUt5TrIl78V3/view?usp=sharing

2. Shown above

3. I've added a default dock and tested it without changing any settings or adding programs (as is). The same thing happens with the default dock.

4. If I remove the panel and log out/in, the problem is still present.
Comment 4 Michail Vourlakos 2018-08-30 10:32:55 UTC
I tried your layout in my system and the problem doesnt appear.

You can try to run try the following:

1. close Latte
2. run Latte from the terminal with "latte-dock -d --with-window" (that way a debug window is shown)
3. make the video again but this time have that window always shown in order to checkout the variables in it when the issue appears
Comment 5 Lucien 2018-08-30 12:14:31 UTC
(In reply to Michail Vourlakos from comment #4)
> I tried your layout in my system and the problem doesnt appear.
> 
> You can try to run try the following:
> 
> 1. close Latte
> 2. run Latte from the terminal with "latte-dock -d --with-window" (that way
> a debug window is shown)
> 3. make the video again but this time have that window always shown in order
> to checkout the variables in it when the issue appears

I've made a new video as specified: https://drive.google.com/file/d/1tq2YSx7OWgLSR1NqXgsdFTLwDy-DjqVU/view?usp=sharing
Comment 6 Michail Vourlakos 2018-08-30 13:21:04 UTC
(In reply to Lucien from comment #5)
> (In reply to Michail Vourlakos from comment #4)
> I've made a new video as specified:
> https://drive.google.com/file/d/1tq2YSx7OWgLSR1NqXgsdFTLwDy-DjqVU/
> view?usp=sharing

I dont see the issue in this video...
Comment 7 Lucien 2018-08-30 13:24:43 UTC
(In reply to Michail Vourlakos from comment #6)
> (In reply to Lucien from comment #5)
> > (In reply to Michail Vourlakos from comment #4)
> > I've made a new video as specified:
> > https://drive.google.com/file/d/1tq2YSx7OWgLSR1NqXgsdFTLwDy-DjqVU/
> > view?usp=sharing
> 
> I dont see the issue in this video...

I know. Maybe because there are open (non obstructive) windows that keep the dock active, but that is just a guess.
Comment 8 Michail Vourlakos 2018-08-30 13:26:25 UTC
(In reply to Lucien from comment #7)
> (In reply to Michail Vourlakos from comment #6)
> I know. Maybe because there are open (non obstructive) windows that keep the
> dock active, but that is just a guess.

try to reproduce by closing all windows and showing only a single one
Comment 9 Lucien 2018-08-30 14:18:56 UTC
(In reply to Michail Vourlakos from comment #8)
> (In reply to Lucien from comment #7)
> > (In reply to Michail Vourlakos from comment #6)
> > I know. Maybe because there are open (non obstructive) windows that keep the
> > dock active, but that is just a guess.
> 
> try to reproduce by closing all windows and showing only a single one

Tried it this way: https://drive.google.com/file/d/1suVDlPeSr4kIpR-n7yvcbG6siB_4Qf-Q/view?usp=sharing
Comment 10 Michail Vourlakos 2018-08-30 15:05:50 UTC
:) I have a very good guess... :)

what is that at the right of the screen with clocks, cpus... etc?
Comment 11 Lucien 2018-08-30 15:23:10 UTC
(In reply to Michail Vourlakos from comment #10)
> :) I have a very good guess... :)
> 
> what is that at the right of the screen with clocks, cpus... etc?

That's the conky (found online). I tried it ones to close it when I also changed the theming to default. It did not help in resolving the issue.
Comment 12 Lucien 2018-08-30 15:36:26 UTC
I've tried again. I disabled the conky at startup and rebooted. It did not resolve the issue.
Comment 13 Michail Vourlakos 2018-08-30 15:51:34 UTC
how about DodgeMaximized ?
if you close the last maximized window same things happens?
Comment 14 Lucien 2018-08-30 16:02:50 UTC
(In reply to Michail Vourlakos from comment #13)
> how about DodgeMaximized ?
> if you close the last maximized window same things happens?

I tried that to. I also tried editing the settings (all of them), including the advanced settings. I tried re-installing and starting "clean" (with a default dock). The only thing I can think of I did not try is a complete re-install of my system. Maybe the issue is "created" with editing the theming settings? I could try that (takes me about 3 to 4 hours) and redo my settings and keep a written log that I can send if the issue starts again?
Comment 15 Michail Vourlakos 2018-08-30 16:11:43 UTC
(In reply to Lucien from comment #14)
> (In reply to Michail Vourlakos from comment #13)
> > how about DodgeMaximized ?
> > if you close the last maximized window same things happens?
> 
> I tried that to. I also tried editing the settings (all of them), including
> the advanced settings. I tried re-installing and starting "clean" (with a
> default dock). The only thing I can think of I did not try is a complete
> re-install of my system. Maybe the issue is "created" with editing the
> theming settings? I could try that (takes me about 3 to 4 hours) and redo my
> settings and keep a written log that I can send if the issue starts again?

I dont think it is something in your settings...
but I cant think something other to test yet in order to find out what is breaking your system's latte experience
Comment 16 Lucien 2018-08-30 16:45:02 UTC
Then I'll just use it with the "quick-fix" with the systems-tray for the time being.
Comment 17 Michail Vourlakos 2018-08-30 17:09:51 UTC
(In reply to Lucien from comment #16)
> Then I'll just use it with the "quick-fix" with the systems-tray for the
> time being.

checking from the videos various things...

what is the window titlebar?
can you test with Breeze?
Comment 18 Michail Vourlakos 2018-08-30 17:36:12 UTC
BTW, if you believe that is one of your settings you could try the following without deleting any of your settings:

1. create a new user called "defaults"
2. logout from your current and login to the "defaults" one
3. run latte in the defaults user and see if the issue is still valid
Comment 19 Lucien 2018-08-30 18:57:27 UTC
(In reply to Michail Vourlakos from comment #18)
> BTW, if you believe that is one of your settings you could try the following
> without deleting any of your settings:
> 
> 1. create a new user called "defaults"
> 2. logout from your current and login to the "defaults" one
> 3. run latte in the defaults user and see if the issue is still valid

I've did this, and the issue is still present in the "Defaults" user with absolute defaults for all. I then put the plasma-panel to the top and changed the theming to Breeze, while testing between every step. No change. I then used Pacman instead of Pamac to remove and install Latte-Dock, but that did not help.
Comment 20 Lucien 2018-08-30 20:29:36 UTC
I tried something else. I removed all packages from AUR and then removed orphaned packeges, but that did also not work. Then I remembered that (prior to Late-Dock installation) I did a big cleanup of QT4 and orphaned packages a little while back. Maybe I removed something that is needed, without being a dependency? Could it be useful if I provide a list?
Comment 21 Lucien 2018-08-30 20:57:55 UTC
Created attachment 114707 [details]
installed packages list
Comment 22 Michail Vourlakos 2018-08-31 06:47:04 UTC
(In reply to Lucien from comment #21)
> Created attachment 114707 [details]
> installed packages list

I dont think it is a matter of installed packages.
Your system may behave differently but I dont know why...

Only that would make sense is that the window when is closing is still active with the old geometry and for that Latte indicates that it still covers the dock. But that shouldnt happen. I will leave the bug report open hoping that something new will arise or that more users will be hit by that bug and with bigger demographics we may find a way to indicate what is the problem.
Comment 23 Lucien 2018-08-31 08:24:36 UTC
(In reply to Michail Vourlakos from comment #22)
> (In reply to Lucien from comment #21)
> > Created attachment 114707 [details]
> > installed packages list
> 
> I dont think it is a matter of installed packages.
> Your system may behave differently but I dont know why...
> 
> Only that would make sense is that the window when is closing is still
> active with the old geometry and for that Latte indicates that it still
> covers the dock. But that shouldnt happen. I will leave the bug report open
> hoping that something new will arise or that more users will be hit by that
> bug and with bigger demographics we may find a way to indicate what is the
> problem.

I believe you're correct on that. I tried Latte-Dock with the Manjaro and Kubuntu live USB, and both gave the same behavior of the issue. I'll give my system info, maybe that will help in resolving the issue when you have more affected systems.
Comment 24 Lucien 2018-08-31 08:25:28 UTC
Created attachment 114713 [details]
system information
Comment 25 Michail Vourlakos 2018-08-31 09:22:18 UTC
(In reply to Lucien from comment #23)
> (In reply to Michail Vourlakos from comment #22)
> 
> I believe you're correct on that. I tried Latte-Dock with the Manjaro and
> Kubuntu live USB, and both gave the same behavior of the issue. I'll give my
> system info, maybe that will help in resolving the issue when you have more
> affected systems.


There is also an alternative that I had tried in the past with other users:

If you built Latte from master version not from prebuilt packages directly from Latte source repo then we can do the following:

1. We agree together on a date in order to chat 
2. I create a specific branch for the bug and you use that specific branch
3. This all done runtime, you give me the debug output I am interested in and I am uploading commits in order to test things in your system
4. This is like I am playing with your system but you are in charge :)
5. If everything goes ok, at the end I will have understand what isnt working as used to be in your system and I can create one single patch that will fix this

From the above procedure I have been able to fix also very rough problems that I wasnt able to reproduce in my system such as crashes, hidden docks all the time etc...
Comment 26 Michail Vourlakos 2018-08-31 12:04:07 UTC
I think I managed to reproduce...
Comment 27 Michail Vourlakos 2018-08-31 12:32:17 UTC
Git commit 66817695feb76c521b5f7a3dfa1f917b39c4de7b by Michail Vourlakos.
Committed on 31/08/2018 at 12:29.
Pushed by mvourlakos into branch 'master'.

raise docks when there isnt any active window

--there are cases that the window manager doesnt
return any active window at all. In such cases
we can assume that our docks/panels dont have to
be hidden.
FIXED-IN: 0.8.1

M  +14   -1    app/dock/visibilitymanager.cpp

https://commits.kde.org/latte-dock/66817695feb76c521b5f7a3dfa1f917b39c4de7b
Comment 28 Michail Vourlakos 2018-08-31 12:36:04 UTC
Git commit fbb7f7997459d8a685324faad284d17da2075471 by Michail Vourlakos.
Committed on 31/08/2018 at 12:32.
Pushed by mvourlakos into branch 'v0.8'.

raise docks when there isnt any active window

--there are cases that the window manager doesnt
return any active window at all. In such cases
we can assume that our docks/panels dont have to
be hidden.
FIXED-IN: 0.8.1
(cherry picked from commit 66817695feb76c521b5f7a3dfa1f917b39c4de7b)

M  +14   -1    app/dock/visibilitymanager.cpp

https://commits.kde.org/latte-dock/fbb7f7997459d8a685324faad284d17da2075471
Comment 29 Michail Vourlakos 2018-08-31 12:39:14 UTC
Steps to reproduce just in any case:

1. minimize all windows
2. start Latte and click on a launcher
3. make the new created window to overlap the dock in order for the dock to become hidden
4. close the new created window
5. the dock doesnt appear afterwards

the patch catches the case and raises the dock
Comment 30 Lucien 2018-08-31 12:57:03 UTC
Great, you managed to reproduce and fix it!! Should I wait for an updated Latte to hit the Manjaro repo, or is there a way the fix can be implemented now?
Comment 31 Michail Vourlakos 2018-08-31 13:55:07 UTC
(In reply to Lucien from comment #30)
> Great, you managed to reproduce and fix it!! Should I wait for an updated
> Latte to hit the Manjaro repo, or is there a way the fix can be implemented
> now?

if you dont build Latte by yourself you should wait for 0.8.1 to be released and reach repos
Comment 32 Lucien 2018-09-01 13:25:38 UTC
I've build it myself (I cloned the repo and checked for the fix in the affected file before installing), but it is fixed partially. The issue was also present with the application dashboard plasmoid, and the fix worked for that. But not for other windows, until I do the "quick-fix" with the system-tray.
Comment 33 Michail Vourlakos 2018-09-01 13:33:31 UTC
(In reply to Lucien from comment #32)
> I've build it myself (I cloned the repo and checked for the fix in the
> affected file before installing), but it is fixed partially. The issue was
> also present with the application dashboard plasmoid, and the fix worked for
> that. But not for other windows, until I do the "quick-fix" with the
> system-tray.

can you show me a video please?
Comment 34 Lucien 2018-09-01 14:11:32 UTC
I've made a new video: https://drive.google.com/file/d/13j_ayjspi-teMaMdO-BUKqkgJ_z1CRBy/view?usp=sharing

It seems that when I just klik on the desktop, it's also working normally thereafter (like with the system-tray). (in the video at the end, just before I open and minimize vokoscreen, I made it come up by just klikking).

I should also mention that I went ahead and just reinstalled my entire system (just to make sure). I then immediately (just after updating) installed the fixed version and tested it with the default dock (no extra software installed/removed or theming applied).
Comment 35 Michail Vourlakos 2018-09-01 14:19:56 UTC
(In reply to Lucien from comment #34)
> I've made a new video:
> https://drive.google.com/file/d/13j_ayjspi-teMaMdO-BUKqkgJ_z1CRBy/
> view?usp=sharing
> 
> It seems that when I just klik on the desktop, it's also working normally
> thereafter (like with the system-tray). (in the video at the end, just
> before I open and minimize vokoscreen, I made it come up by just klikking).
> 
> I should also mention that I went ahead and just reinstalled my entire
> system (just to make sure). I then immediately (just after updating)
> installed the fixed version and tested it with the default dock (no extra
> software installed/removed or theming applied).

now that you can build from latte repo are you able to find a time to try to solve this together with me? are you free any time today?
Comment 36 Lucien 2018-09-01 14:29:54 UTC
At the moment it is 16:30 here, and I have some free time after 20:00 today.

I should mention that I used the supplied install script to build (don't know yet how to use build-tools) and that I consider myself somewhere between a beginner and intermediate user, so I would need every step of the process (copy/paste commands and what else you would need me to do).
Comment 37 Michail Vourlakos 2018-09-01 14:49:10 UTC
Git commit 203c740980c594e5e90b4f4b54261561a89c35f0 by Michail Vourlakos.
Committed on 01/09/2018 at 14:45.
Pushed by mvourlakos into branch 'master'.

IMPORTANT FIX:show dodged dock at corner cases

When there was only one latte dock and the last
active window was closed, the dock wasnt showing
afterwards. The dodge logic now has been improved
in order to not lose any window manager signals
that could help indicate when to show/hide a
dodge capable dock
FIXED-IN: 0.8.1

M  +8    -13   app/dock/visibilitymanager.cpp

https://commits.kde.org/latte-dock/203c740980c594e5e90b4f4b54261561a89c35f0
Comment 38 Michail Vourlakos 2018-09-01 14:49:54 UTC
Git commit ceacb5745c88c9acbe37949fd67d4ad3b365a920 by Michail Vourlakos.
Committed on 01/09/2018 at 14:49.
Pushed by mvourlakos into branch 'v0.8'.

IMPORTANT FIX:show dodged dock at corner cases

When there was only one latte dock and the last
active window was closed, the dock wasnt showing
afterwards. The dodge logic now has been improved
in order to not lose any window manager signals
that could help indicate when to show/hide a
dodge capable dock
FIXED-IN: 0.8.1
(cherry picked from commit 203c740980c594e5e90b4f4b54261561a89c35f0)

M  +8    -13   app/dock/visibilitymanager.cpp

https://commits.kde.org/latte-dock/ceacb5745c88c9acbe37949fd67d4ad3b365a920
Comment 39 Michail Vourlakos 2018-09-01 14:54:31 UTC
(In reply to Lucien from comment #36)
> 

I found it!!! :) The bug was occurring only when there was only one latte dock present such as the Default layout. In my system I use also and a Latte panel at the top edge.

Thank you very much for your patience, you should know that this was not happening only to you but to ALL systems. It was just you that had the patience to report it and cooperate with me in order to track it down ! :) So thank you very much for this!!!

Feel free to report back your findings when you test the new fix!
Comment 40 Michail Vourlakos 2018-09-01 15:00:07 UTC
Steps to reproduce just in any case (#2 - based on the second fix):

1. Use a latte layout that has only one dock present
2. minimize all windows
3. start Latte and click on a launcher
4. make the new created window to overlap the dock in order for the dock to become hidden
5. close the new created window
6. the dock doesnt appear afterwards


P.S. For the record the Dodge behavior very important code has not been implemented by me in the past so in order to take ownership and understand why things were implemented that way I will be more aggressive to solutions. Better a commented and understandable code that may reintroduce issues than a black box solution that is difficult to be improved in the future.
Comment 41 Lucien 2018-09-01 15:33:22 UTC
(In reply to Michail Vourlakos from comment #39)
> (In reply to Lucien from comment #36)
> > 
> 
> I found it!!! :) The bug was occurring only when there was only one latte
> dock present such as the Default layout. In my system I use also and a Latte
> panel at the top edge.
> 
> Thank you very much for your patience, you should know that this was not
> happening only to you but to ALL systems. It was just you that had the
> patience to report it and cooperate with me in order to track it down ! :)
> So thank you very much for this!!!
> 
> Feel free to report back your findings when you test the new fix!

It's working perfectly now!! I'm glad to have been helpful tracking this down and just liked the experience. It's the first time for me to even report a bug and will do it more often ;)