raise docks when there isnt any active window

--there are cases that the window manager doesnt
return any active window at all. In such cases
we can assume that our docks/panels dont have to
be hidden.

BUG: 398052
FIXED-IN: 0.8.1